Atualização do script e alinhamento das colunas utilizadas.

--- a/script.ipynb
+++ b/script.ipynb
@@ -13,6 +13,10 @@
     "import os\n",
     "import datetime\n",
     "import pymongo\n",
+    "import time\n",
+    "\n",
+    "# Começa a contagem do tempo\n",
+    "tempo_inicio = time.time()\n",
     "\n",
     "# Cria uma conexão com o mongo\n",
     "myclient = pymongo.MongoClient(MONGO_HOST)\n",
@@ -62,7 +66,7 @@
     "]\n",
     "\n",
     "# Carrega os dados dos contratos do portal da transparencia\n",
-    "data_contratos_jp = requests.get('https://transparencia.joaopessoa.pb.gov.br:8080/licitacoes/contratos?data_assinatura_periodo=2017-1-1&data_assinatura_periodo=2020-1-31')\n",
+    "data_contratos_jp = requests.get('https://transparencia.joaopessoa.pb.gov.br:8080/licitacoes/contratos?data_assinatura_periodo=2020-1-1&data_assinatura_periodo=2021-4-30')\n",
     "data_contratos_jp = pandas.DataFrame.from_dict(data_contratos_jp.json())\n",
     "\n",
     "# Percorrer as linhas dos dados do sagres\n",
@@ -71,7 +75,7 @@
     "    ano_licitacao_sagres = int(s.numero_licitacao[6:10])\n",
     "    \n",
     "    # Só considera licitações entre 2017 e 2020\n",
-    "    if (ano_licitacao_sagres >= 2017) & (ano_licitacao_sagres <= 2020) :\n",
+    "    if (ano_licitacao_sagres >= 2020) & (ano_licitacao_sagres <= 2021) :\n",
     "        #Padroniza o numero da licitação do sagres\n",
     "        numero_licitacao_sagres = s.numero_licitacao.replace(\"/\",\"\")\n",
     "        numero_licitacao_sagres = int(numero_licitacao_sagres)\n",
@@ -86,30 +90,25 @@
     "            numero_licitacao_portal = int(r.numero_licitacao)\n",
     "            numero_licitacao_portal = '{:0>9}'.format(r.numero_licitacao)\n",
     "        \n",
-    "            if (numero_licitacao_sagres == numero_licitacao_sagres) & (s.cpf_cnpj_proponente == r.cpf_cnpj_fornecedor) & (s.valor_proposta == r.valor) :\n",
-    "                print(\"Achou o contrato da licitação: \"+numero_licitacao_sagres)\n",
+    "            if (numero_licitacao_sagres == numero_licitacao_portal) & (s.cpf_cnpj_proponente == r.cpf_cnpj_fornecedor) & (s.valor_proposta == r.valor) :\n",
+    "                #print(\"Achou o contrato da licitação: \"+numero_licitacao_sagres)\n",
     "                contratos_dict = {\n",
-    "                    \"nome_contrato\": r.nome_contrato,\n",
-    "                    \"tipo\": r.tipo,\n",
-    "                    \"numero_contrato\": r.numero_contrato,\n",
-    "                    \"objeto_contrato\": r.objeto_contrato,\n",
-    "                    \"data_assinatura\": r.data_assinatura,\n",
+    "                    \"numero_contrato\": r.numero_contrato, \n",
+    "                    \"objeto_contrato\": r.objeto_contrato, \n",
     "                    \"inicio_vigencia\": r.inicio_vigencia,\n",
     "                    \"fim_vigencia\": r.fim_vigencia,\n",
-    "                    \"valor\": s.valor_proposta,\n",
-    "                    \"cpf_cnpj_fornecedor\": s.cpf_cnpj_proponente,\n",
+    "                    \"contratante\": r.contratante,\n",
     "                    \"fornecedor\": s.nome_proponente,\n",
-    "                    \"url_contrato\": \"https://transparencia.joaopessoa.pb.gov.br:8080/licitacoes/visualizar-arquivo?id=\"+str(r.id_arquivo),\n",
-    "                    \"situacao_proposta\":s.situacao_proposta\n",
+    "                    \"cpf_cnpj_fornecedor\": s.cpf_cnpj_proponente,\n",
+    "                    \"valor_proposta\": s.valor_proposta\n",
     "                }\n",
     "                break;            \n",
     "        else: # Caso não encontre nada no for\n",
-    "            print(\"Não achou o contrato da licitação: \"+numero_licitacao_sagres)\n",
+    "            #print(\"Não achou o contrato da licitação: \"+numero_licitacao_sagres)\n",
     "            contratos_dict = {\n",
     "                \"fornecedor\":s.nome_proponente,\n",
     "                \"cpf_cnpj_fornecedor\":s.cpf_cnpj_proponente,\n",
-    "                \"valor\":s.valor_proposta,\n",
-    "                \"situacao_proposta\":s.situacao_proposta\n",
+    "                \"valor_proposta\":s.valor_proposta,\n",
     "            }        \n",
     "                \n",
     "        # Busca no banco se existe uma licitação com essas características\n",
@@ -124,20 +123,30 @@
     "        # Caso não tenha inserido ainda a licitação\n",
     "        if str(mydoc) == \"None\" :            \n",
     "            mycol.insert_one({\n",
+    "                \"protocolo_licitacao\":s.protocolo_licitacao,\n",
     "                \"numero_licitacao\":numero_licitacao_sagres,\n",
     "                \"nome_modalidade_licitacao\":s.nome_modalidade_licitacao,\n",
     "                \"nome_municipio\":s.nome_municipio,\n",
+    "                \"cd_ugestora\": s.cd_ugestora,\n",
+    "                \"jurisdicionado_id\": s.jurisdicionado_id,\n",
     "                \"nome_jurisdicionado\":s.nome_jurisdicionado,\n",
     "                \"objeto_licitacao\":s.objeto_licitacao,\n",
     "                \"valor_estimado_licitacao\":s.valor_estimado_licitacao,\n",
     "                \"valor_licitado_licitacao\":s.valor_licitado_licitacao,\n",
     "                \"data_homologacao_licitacao\":s.data_homologacao_licitacao,\n",
+    "                \"ano_homologacao_licitacao\":s.ano_homologacao_licitacao,\n",
+    "                \"nome_estagio_processual_licitacao\":s.nome_estagio_processual_licitacao,\n",
+    "                \"nome_setor_atual_licitacao\":s.nome_setor_atual_licitacao,\n",
+    "                \"entidade_governamental\":\"Prefeitura Municipal de João Pessoa\",\n",
     "                \"url\":s.url,\n",
     "                \"contratos\":[contratos_dict]\n",
     "            })       \n",
     "        else : # Caso já exista, acrescentar apenas o contrato\n",
     "            mydoc[\"contratos\"].append(contratos_dict)\n",
-    "            mycol.update_one( {\"_id\":mydoc[\"_id\"]}, { \"$set\": mydoc })"
+    "            mycol.update_one( {\"_id\":mydoc[\"_id\"]}, { \"$set\": mydoc })\n",
+    "            \n",
+    "tempoExec = time.time() - tempo_inicio\n",
+    "print(\"Tempo de execução: {} segundos\".format(tempoExec))"
    ]
   }
  ],
